# VendingMachine

./: CMakeLists.txt  README.md  main.cpp  utils.h
Entities/: Money.cpp  Money.h  Product.cpp  Product.h
Exceptions/: InvalidCodeException.cpp  InvalidCodeException.h  InvalidPriceException.cpp  InvalidPriceException.h  NoProductException.cpp  NoProductException.h  NoRangeException.cpp  NoRangeException.h  PositionExceptions.cpp  PositionExceptions.h  ValutaExceptions.cpp  ValutaExceptions.h
Repos/: Repo.h  Repo_file_money.h  Repo_file_product.h
Service/: Service.cpp  Service.h
Tests/: Tests.cpp  Tests.h
UI/: UI.cpp  UI.h
Validations/: ProductValidator.cpp  ProductValidator.h  ValutaValidator.cpp  ValutaValidator.h
